	all platforms, including windows

2009-06-17  Sam Steingold  <sds@gnu.org>

	* configure.in: use gl_FUNC_GETPAGESIZE instead of CL_GETPAGESIZE
	* unix.d (getpagesize): remove prototype
	* win32.d: include <unistd.h> for getpagesize
	* spvw_mmap.d (getpagesize) [HAVE_WIN32_VM]: remove, rely on gnulib
	* m4/getpagesize.m4: remove, rely on glm4/getpagesize.m4

2009-06-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xcondition_wait_helper) [POSIX_THREADS]: fix infinite
	waiting on condition variable (was a typo with bad consequences)

2009-06-16  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_direction_compatible): when fcntl() fails,
	return false - the handle is likely closed; errno = EBADF
	(make_standard_output_file_stream): accept handle, call
	handle_direction_compatible()
	(make_standard_error_file_stream): remove
	(get_standard_output_file_stream): pass stdout_handle to
	make_standard_output_file_stream()
	(get_standard_error_file_stream): use
	make_standard_output_file_stream(stderr_handle)
	(make_terminal_io): use handle_direction_compatible() in addition
	to pipe_file_handle_p() to decide whether to create a terminal or
	a standard file stream; this fixes bug #[ 2805778 ]: when a
	standard handle is invalid, an empty stream is used
	* makemake.in (check-script): add a test for bug #[ 2805778 ]

2009-06-15  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.47++ (2009-06-15)

2009-06-15  Sam Steingold  <sds@gnu.org>

	* gllib/getpagesize.c, gllib/mbsrtowcs-state.c, gllib/mbsrtowcs.c:
	* gllib/memchr.c, gllib/string.in.h, gllib/strnlen1.c, gllib/strnlen1.h:
	* glm4/00gnulib.m4, glm4/getpagesize.m4, glm4/mbsrtowcs.m4:
	* glm4/memchr.m4, glm4/mmap-anon.m4, glm4/string_h.m4: add from gnulib
	* build-aux/config.guess, build-aux/config.sub, build-aux/depcomp:
	* build-aux/install-sh, build-aux/missing, gllib/config.charset:
	* gllib/gettext.h, gllib/gettimeofday.c, gllib/localcharset.c:
	* gllib/Makefile.am, gllib/mbrtowc.c, gllib/regex_internal.h: