@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -11,7 +11,7 @@ dnl From Bruno Haible, Marcus Daniels, Sam Steingold.
 AC_PREREQ(2.57)
 
 AC_DEFUN([CL_MPROTECT],
-[AC_REQUIRE([CL_GETPAGESIZE])dnl
+[AC_REQUIRE([gl_FUNC_GETPAGESIZE])dnl
 AC_REQUIRE([CL_MMAP])dnl
 AC_CHECK_FUNCS(mprotect)dnl
 if test $ac_cv_func_mprotect = yes; then
@@ -30,7 +30,7 @@ mprotect_prog='
 #define getpagesize() PAGESIZE
 #else
 ]AC_LANG_EXTERN[
-RETGETPAGESIZETYPE getpagesize (void);
+int getpagesize (void);
 #endif
 char foo;
 int main () {
